# HuaWeiAREngineAndroidHelperDemo

./: README.md  settings.gradle
HuaWeiAREngineAndroidHelper/: CMakeLists.txt  build.gradle
HuaWeiAREngineAndroidHelper/src/main/: AndroidManifest.xml
HuaWeiAREngineAndroidHelper/src/main/cpp/androidTest/java/com/puremilk/nativelib/: ExampleInstrumentedTest.java
HuaWeiAREngineAndroidHelper/src/main/cpp/includes/: CameraHelper.h
HuaWeiAREngineAndroidHelper/src/main/cpp/sources/: CameraHelper.cpp  nativelib.cpp
HuaWeiAREngineAndroidHelper/src/main/java/com/puremilk/nativelib/: NativeLib.java  Vector2Int.java
HuaWeiAREngineAndroidHelper/src/test/java/com/puremilk/nativelib/: ExampleUnitTest.java
app/: build.gradle
app/src/androidTest/java/com/puremilk/arenginecameredemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/puremilk/arenginecameredemo/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/puremilk/arenginecameredemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
